feat(pali): add error control

--- a/pali/index.html
+++ b/pali/index.html
@@ -23,10 +23,10 @@
 
         <h1 class="mt-5">Welcome</h1>
 
-            <form class="col-6 mx-auto">
+            <form class="col-6 mx-auto" id="form">
                 <label for="word-input" class="form-label mt-5">Vuoi sapere se una parola è palindroma?</label>
                 <input id="word-input" class="form-control mt-3" type="text" placeholder="Scrivi una parola">
-    
+                <div class="invalid-feedback"></div>
                 <button id="send-button" class="btn btn-primary mt-3" type="button">Scopri</button>
             </form>
 
