feat(dispri): add dom elements

--- a/dispari/index.html
+++ b/dispari/index.html
@@ -28,13 +28,13 @@
             <div class="col-5">
                 <label for="select" class="form-label mt-5">Scegli pari o dispari</label>
                 <select class="form-select mt-3" aria-label="Default select example" id="select">
-                    <option value="pari">Pari</option>
-                    <option value="dispari">Dispari</option>
+                    <option id="option-1" value="pari">Pari</option>
+                    <option id="option-2" value="dispari">Dispari</option>
                 </select>
             </div>
             <div class="col-5">
-                <label for="word-input" class="form-label mt-5">Inserisci il tuo numero</label>
-                <input id="word-input" class="form-control mt-3" type="text" placeholder="Scrivi un numero da 1 a 5">
+                <label for="num-input" class="form-label mt-5">Inserisci il tuo numero</label>
+                <input id="num-input" class="form-control mt-3" type="text" placeholder="Scrivi un numero da 1 a 5">
                 <div class="invalid-feedback"></div>
             </div>
 
