--- a/pali/index.html
+++ b/pali/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="javascript exercise" />
 
         <!-- title and icon -->
-        <title>JS Mail</title>
+        <title>PALI e dispari</title>
         <link rel="icon" href="../img/logo-small.ico" />
 
         <!-- CSS link -->
